workshop04/.ipynb_checkpoints/weather-svc-checkpoint.yml
apiVersion: v1
kind: Service
metadata:
    name: weatherapp-svc
spec:
    selector:
        app: weatherapp
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 3000
