workshop04/.ipynb_checkpoints/weather-gateway-checkpoint.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: weather-gw
    
spec:
    selector:
        istio: ingressgateway
    servers:
    - port:
          number: 80
          name: http
          protocol: HTTP
      hosts:
      - weather.159.89.211.248.nip.io
